--- a/CK/frontend/web/documents.html
+++ b/CK/frontend/web/documents.html
@@ -5,7 +5,7 @@
 <head> 
   <meta charset="UTF-8" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
-  <title>Kho lưu trữ | Studocu Việt Nam</title> 
+  <title>Kho lưu trữ | Lưu Giữ Tài Liệu</title> 
   <link rel="stylesheet" href="css/style.css"> 
   <link rel="stylesheet" href="css/documents.css" />
   <style>
@@ -23,31 +23,30 @@
 
   <header class="header">
     <div class="logo">
-        <img src="assets/logo.jpg" alt="Studocu Logo">
-        <span>Studocu</span>
+        <img src="assets/Logo.png" alt="Logo">
+    </div>
+    <div class="title">
+        <span>Lưu Giữ Tài Liệu</span>
     </div>
     <div class="user-actions">
         <button id="loginBtn" onclick="window.location.href='login.html'">Đăng nhập</button>
         <button id="registerBtn" onclick="window.location.href='register.html'">Đăng ký</button>
         
+        <span id="userName" class="hidden"></span>
         <button id="logoutBtn" class="hidden">Đăng xuất</button>
     </div>
 </header>
 
-<aside class="sidebar">
-    <h3>Tài khoản</h3>
-    <a href="upload.html" class="btn-new">+ Mới</a>
+<nav class="nav-bar">
+    <a href="upload.html" class="btn-new">+ UPLOAD</a>
     <ul>
         <li><a href="index.html">🏠 Trang chủ</a></li>
-        <li><a href="documents.html">📁 Kho lưu trữ của tôi</a></li> <li><a href="recent.html">🕓 Nội dung gần đây</a></li>
+        <li><a href="documents.html" class="active">📁 Kho lưu trữ của tôi</a></li> <li><a href="recent.html">🕓 Nội dung gần đây</a></li>
         <li><a href="trash.html">🗑️ Thùng rác</a></li>
         <li><a href="favorites.html">⭐ Bộ nhớ</a></li>
-    </ul>
-    <hr>
-    <ul>
         <li><a href="settings.html">⚙️ Cài đặt</a></li>
     </ul>
-</aside>
+</nav>
   <main class="content">
     <section class="my-files-section">
       <h2>📁 Kho lưu trữ của tôi</h2>
@@ -62,8 +61,9 @@
       <a href="#">Giới thiệu</a> | <a href="#">Liên hệ</a> | <a href="#">Điều khoản</a> | <a href="#">Chính sách bảo mật</a>
     </div>
     <div class="footer-info">
-      <p>Studocu không liên kết hoặc được xác nhận bởi bất kỳ trường học, cao đẳng hoặc đại học nào.</p>
-      <p>Copyright © 2025 StudeerSnel B.V., Keizersgracht 424-sous, 1016 GC Amsterdam</p>
+      <p>Nền tảng này cho phép người dùng tải lên và chia sẻ tài liệu với mục đích học tập và tham khảo.</p>
+      <p>Nội dung do người dùng tự đăng tải. Website không đại diện và không liên kết chính thức với bất kỳ trường học, cao đẳng hoặc đại học nào.</p>
+      <p>Copyright © 2026. All rights reserved.</p>
     </div>
   </footer>
   <div id="edit-modal-overlay" class="modal-overlay hidden" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="edit-modal-title">
