--- a/CK/frontend/web/login.html
+++ b/CK/frontend/web/login.html
@@ -13,7 +13,7 @@
   <!-- HEADER -->
   <header class="header">
     <div class="logo">
-      <img src="assets/logo.jpg" alt="Studocu Logo">
+      <img src="assets/Logo.png" alt="Logo">
       
     </div>
 <div class="user-actions">
