--- a/CK/frontend/web/myfiles.html
+++ b/CK/frontend/web/myfiles.html
@@ -2,29 +2,36 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Kho lưu trữ của tôi | Studocu</title>
+  <title>Kho lưu trữ của tôi | Lưu Giữ Tài Liệu</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="header">
-    <div class="logo"><img src="assets/logo.jpg"><span>Studocu</span></div>
-    <div class="user-actions"><img src="assets/avatar.jpg" class="avatar" id="userAvatar"></div>
+    <div class="logo">
+        <img src="assets/Logo.png" alt="Logo">
+    </div>
+    <div class="title">
+        <span>Lưu Giữ Tài Liệu</span>
+    </div>
+    <div class="user-actions">
+        <button id="loginBtn" onclick="window.location.href='login.html'">Đăng nhập</button>
+        <button id="registerBtn" onclick="window.location.href='register.html'">Đăng ký</button>
+        
+        <span id="userName" class="hidden"></span>
+        <button id="logoutBtn" class="hidden">Đăng xuất</button>
+    </div>
   </header>
 
-  <aside class="sidebar">
-    <h3>Tài khoản</h3>
-    <a href="upload.html" class="btn-new">+ Mới</a>
+  <nav class="nav-bar">
+    <a href="upload.html" class="btn-new">+ UPLOAD</a>
     <ul>
         <li><a href="index.html">🏠 Trang chủ</a></li>
-        <li><a href="documents.html">📁 Kho lưu trữ của tôi</a></li> <li><a href="recent.html">🕓 Nội dung gần đây</a></li>
+        <li><a href="documents.html" class="active">📁 Kho lưu trữ của tôi</a></li> <li><a href="recent.html">🕓 Nội dung gần đây</a></li>
         <li><a href="trash.html">🗑️ Thùng rác</a></li>
         <li><a href="favorites.html">⭐ Bộ nhớ</a></li>
-    </ul>
-    <hr>
-    <ul>
         <li><a href="settings.html">⚙️ Cài đặt</a></li>
     </ul>
-</aside>
+</nav>
 
   <main class="content">
     <h2>📂 Kho lưu trữ của tôi</h2>
@@ -34,7 +41,7 @@
   </main>
 
   <footer class="footer">
-    <p>Studocu Việt Nam © 2025</p>
+    <p>Kho lưu trữ của tôi © 2026</p>
   </footer>
     <script src="js/api.js"></script>
   <script src="js/myfiles.js"></script>
