--- a/CK/frontend/web/trash.html
+++ b/CK/frontend/web/trash.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Thùng rác | Studocu</title>
+  <title>Thùng rác | Lưu Giữ Tài Liệu</title>
   <link rel="stylesheet" href="css/style.css">
   
   <style>
@@ -39,30 +39,30 @@
 <body>
     <header class="header">
     <div class="logo">
-        <img src="assets/logo.jpg" alt="Studocu Logo">
-        <span>Studocu</span>
+        <img src="assets/Logo.png" alt="Logo">
+    </div>
+    <div class="title">
+        <span>Lưu Giữ Tài Liệu</span>
     </div>
     <div class="user-actions">
         <button id="loginBtn" onclick="window.location.href='login.html'">Đăng nhập</button>
         <button id="registerBtn" onclick="window.location.href='register.html'">Đăng ký</button>
+        <span id="userName" class="hidden"></span>
         <button id="logoutBtn" class="hidden">Đăng xuất</button>
     </div>
 </header>
 
-    <aside class="sidebar">
-    <h3>Tài khoản</h3>
-    <a href="upload.html" class="btn-new">+ Mới</a>
+    <nav class="nav-bar">
+    <a href="upload.html" class="btn-new">+ UPLOAD</a>
     <ul>
         <li><a href="index.html">🏠 Trang chủ</a></li>
         <li><a href="documents.html">📁 Kho lưu trữ của tôi</a></li> 
         <li><a href="recent.html">🕓 Nội dung gần đây</a></li>
-        <li><a href="trash.html" class="active">🗑️ Thùng rác</a></li>         <li><a href="favorites.html">⭐ Bộ nhớ</a></li>
-    </ul>
-    <hr>
-    <ul>
+        <li><a href="trash.html" class="active">🗑️ Thùng rác</a></li>
+        <li><a href="favorites.html">⭐ Bộ nhớ</a></li>
         <li><a href="settings.html">⚙️ Cài đặt</a></li>
     </ul>
-</aside>
+</nav>
 
     <main class="content">
     <h2>🗑️ Thùng rác</h2>
@@ -74,7 +74,7 @@
   </main>
 
     <footer class="footer">
-    <p>Studocu Việt Nam © 2025</p>
+    <p>Kho lưu giữ của tôi © 2026</p>
   </footer>
 
     <script src="js/api.js"></script>
