--- a/CK/frontend/web/upload.html
+++ b/CK/frontend/web/upload.html
@@ -3,7 +3,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Upload tài liệu | Studocu Việt Nam</title>
+  <title>Upload tài liệu | Lưu Giữ Tài Liệu</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/upload.css">
 </head>
@@ -12,32 +12,31 @@
   <!-- HEADER -->
   <header class="header">
     <div class="logo">
-        <img src="assets/logo.jpg" alt="Studocu Logo">
-        <span>Studocu</span>
+        <img src="assets/Logo.png" alt="Logo">
+    </div>
+    <div class="title">
+        <span>Lưu Giữ Tài Liệu</span>
     </div>
     <div class="user-actions">
         <button id="loginBtn" onclick="window.location.href='login.html'">Đăng nhập</button>
         <button id="registerBtn" onclick="window.location.href='register.html'">Đăng ký</button>
         
+        <span id="userName" class="hidden"></span>
         <button id="logoutBtn" class="hidden">Đăng xuất</button>
     </div>
 </header>
 
   <!-- SIDEBAR -->
-  <aside class="sidebar">
-    <h3>Tài khoản</h3>
-    <a href="upload.html" class="btn-new">+ Mới</a>
+  <nav class="nav-bar">
+    <a href="upload.html" class="btn-new">+ UPLOAD</a>
     <ul>
         <li><a href="index.html">🏠 Trang chủ</a></li>
         <li><a href="documents.html">📁 Kho lưu trữ của tôi</a></li> <li><a href="recent.html">🕓 Nội dung gần đây</a></li>
         <li><a href="trash.html">🗑️ Thùng rác</a></li>
         <li><a href="favorites.html">⭐ Bộ nhớ</a></li>
-    </ul>
-    <hr>
-    <ul>
         <li><a href="settings.html">⚙️ Cài đặt</a></li>
     </ul>
-</aside>
+</nav>
 
   <!-- CONTENT -->
   <main class="content">
@@ -83,9 +82,10 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <p>Studocu không liên kết hoặc được xác nhận bởi bất kỳ trường học, cao đẳng hoặc đại học nào.</p>
-    <p>Copyright © 2025 StudeerSnel B.V., Keizersgracht 424-sous, 1016 GC Amsterdam</p>
-    <p>KVK: 56829787, BTW: NL852321363B01</p>
+    <p>Nền tảng này cho phép người dùng tải lên và chia sẻ tài liệu với mục đích học tập và tham khảo.</p>
+    <p>Nội dung do người dùng tự đăng tải. Website không đại diện và không liên kết chính thức với bất kỳ trường học, cao đẳng hoặc đại học nào.</p>
+    <p>Copyright © 2026. All rights reserved.</p>
+
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js"></script>
   <script src="js/api.js"></script>
