--- a/CK/frontend/web/index.html
+++ b/CK/frontend/web/index.html
@@ -77,6 +77,19 @@
 
   </main>
 
+  <!-- FILE VIEWER MODAL -->
+  <div id="fileViewerModal" class="modal hidden">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 id="viewerTitle">Xem tài liệu</h3>
+        <button class="modal-close" onclick="closeFileViewer()">&times;</button>
+      </div>
+      <div class="modal-body">
+        <div id="viewerContainer"></div>
+      </div>
+    </div>
+  </div>
+
   <!-- FOOTER -->
   <footer class="footer">
     <p>CloudVault © 2026 | Nền tảng lưu giữ & quản lý tài liệu an toàn</p>
