--- a/CK/frontend/web/upload.html
+++ b/CK/frontend/web/upload.html
@@ -73,11 +73,14 @@
         <button id="stopBtn" class="btn stop" disabled>⏹️ Hủy</button>
       </div>
 
-      <!-- Progress bar -->
-      <div class="progress-bar">
-        <div id="progress" class="progress"></div>
+      <!-- Progress -->
+      <div class="progress-wrapper">
+        <div class="progress-bar">
+          <div id="progress" class="progress"></div>
+        </div>
+        <p id="statusText" class="status-text"></p>
+        <p id="uploadTime" class="upload-time" style="text-align: center; color: #666; font-size: 12px; margin-top: 8px;"></p>
       </div>
-      <p id="statusText" class="status-text"></p>
     </section>
   </main>
 
